Resolved chat overflow issue

--- a/client/freecom/src/App.css
+++ b/client/freecom/src/App.css
@@ -115,7 +115,7 @@
     background-color: white;
 }
 
-.panel .message-body {
+.panel .message-body, .Dropzone {
     height: calc(100% - 68px);
 }
 
